--- a/tex/mcqmc-2008/sfmt-kanren.bib
+++ b/tex/mcqmc-2008/sfmt-kanren.bib
@@ -178,7 +178,7 @@ note = "\url{http://www.agner.org/random/}"
 
 @misc{ieee754,
 key = "IEEE754",
-title = "{IEEE} Standard for Binary Floating-Point Arithmetic 754-2008",
+title = "{IEEE} Standard for Binary Floating-Point Arithmetic 754",
 pages = "1-58",
 year = "2008",
 note = "\url{http://ieeexplore.ieee.org/servlet/opac?punumber=4610933}"
